# reversi

./: COPYING  INSTALL  Makefile  Makefile.in  config.h  config.status  configure  configure.in  configure.scan  data.h  game  game.c  game.h  hage.c  hage.h  network.c  network.h  search.c  search.h
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  data.h  main.c  main.h  test  test.c
src/.deps/: main.Po
